--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "ci:publish": "pnpm build && pnpm compat && changeset publish --tag legacy",
     "downlevel-dts": "downlevel-dts ./dist/ ./dist/ts4.2 --to=4.2",
     "compat": "eslint --no-eslintrc --config ./.eslintrc.dist.cjs ./dist/livekit-client.umd.js",
-    "size-limit": "size-limit"
+    "size-limit": "size-limit",
+    "release": "yarn build && changeset publish",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@bufbuild/protobuf": "^1.3.0",
